--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,10 @@ bower_components
 build/Release
 
 # Dependency directories
+frontend/node_modules/
 node_modules/
 jspm_packages/
-
+api/sessions/
 # Typescript v1 declaration files
 typings/
 
