--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "output": "webpack --config webpack-config.js --colors"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +16,9 @@
     "less-loader": "^2.2.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.3"
   },
   "devDependencies": {
     "style-loader": "^0.13.1"
