--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
   "keywords": [
     "trading"
   ],
-  "author": "peng.zhang",
+  "author": "wanghsinche",
   "license": "ISC",
   "dependencies": {
     
