--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-photonkit":"^0.4.1",
     "redux": "^3.7.1",
     "react-redux":"^5.0.5",
-    "react-route": "^1.0.3",
+    "react-router": "^3.0.0",
     "redux-thunk":"^2.2.0",
     "axios": "^0.16.2",
     "json-loader": "^0.5.4"
