--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "css-loader": "^0.23.1",
     "electron":"^1.6.11",
     "electron-prebuilt": "^0.36.11",
-    "jQuery": "^1.7.4",
     "less-loader": "^2.2.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react":"^15.6.1",
+    "react-dom": "^15.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "electron-connect":"^0.6.1",
     "electron-connect-webpack-plugin":"^0.1.1",
-    "react-photonkit":"^0.4.1",
     "redux": "^3.7.1",
     "react-redux":"^5.0.5",
-    "react-router": "^3.0.0",
+    "react-router-dom": "^4.1.1",
     "redux-thunk":"^2.2.0",
     "axios": "^0.16.2",
     "json-loader": "^0.5.4"
