--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-router-dom": "^4.1.1",
     "redux-thunk":"^2.2.0",
     "axios": "^0.16.2",
-    "json-loader": "^0.5.4"
+    "json-loader": "^0.5.4",
+    "moment":"^2.18.1",
+    "react-datepicker":"^0.48.0"
   }
 }
