--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "express": "^4.15.2",
-        "body-parser": "^1.17.2"
+        "body-parser": "^1.17.2",
+        "sqlite3": "^3.1.8"
     }
 }
