--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "cors":"^2.8.4",
         "body-parser": "^1.17.2",
         "sqlite3": "^3.1.8",
-        "crypto-js": "^3.1.9-1"
+        "crypto-js": "^3.1.9-1",
+        "escape-html": "^1.0.3"
     }
 }
