--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "body-parser": "^1.17.2",
         "sqlite3": "^3.1.8",
         "crypto-js": "^3.1.9-1",
-        "escape-html": "^1.0.3"
+        "escape-html": "^1.0.3",
+        "node-csv":"^0.1.2"
     }
 }
