--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "sqlite3": "^3.1.8",
         "crypto-js": "^3.1.9-1",
         "escape-html": "^1.0.3",
-        "node-csv":"^0.1.2"
+        "node-csv":"^0.1.2",
+        "moment": "^2.18.1",
+        "jszip": "~2.0.0",
+        "docxtemplater":"^3.1.5"
     }
 }
