--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
+backend/node_modules/
 frontend/node_modules/
 node_modules/
 jspm_packages/
