--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "node-csv":"^0.1.2",
         "moment": "^2.18.1",
         "jszip": "~2.0.0",
-        "docxtemplater":"^3.1.5"
+        "docxtemplater":"^3.1.5",
+        "nodemailer": "^4.0.1"
     }
 }
