--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
+    "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "electron":"^1.6.11",
     "electron-prebuilt": "^0.36.11",
+    "less":"^2.3.1",
     "less-loader": "^2.2.2",
     "react":"^15.6.1",
     "react-dom": "^15.6.1",
