修复email有时发送失败的问题，加上发送失败三次重试功能，加上创建用户前先查看是否存在的功能，更新测试代码

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main":"app.js",
     "scripts":{
         "start":"node app.js >> nodelog.log",
+        "dev":"node app.js",
         "test":"mocha test.js"
     },
     "dependencies": {
