--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-    "version": "0.1.1",
-    "name":"express-server",
-    "main":"app.js",
-    "scripts":{
-        "start":"node app.js >> nodelog.log",
-        "dev":"node app.js",
-        "test":"mocha test.js"
-    },
-    "dependencies": {
-        "axios": "^0.16.2",
-        "express": "^4.15.2",
-        "cors":"^2.8.4",
-        "body-parser": "^1.17.2",
-        "sqlite3": "^3.1.8",
-        "escape-html": "^1.0.3",
-        "node-csv":"^0.1.2",
-        "moment": "^2.18.1",
-        "jszip": "~2.0.0",
-        "docxtemplater":"^3.1.5",
-        "nodemailer": "^4.0.1"
-    }
+  "version": "0.1.1",
+  "name": "express-server",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js >> nodelog.log",
+    "dev": "node app.js",
+    "test": "mocha test.js"
+  },
+  "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "docxtemplater": "^3.1.12",
+    "escape-html": "^1.0.3",
+    "express": "^4.16.2",
+    "jszip": "^3.1.5",
+    "moment": "^2.19.3",
+    "node-csv": "^0.1.2",
+    "nodemailer": "^4.4.0",
+    "sqlite3": "^3.1.13"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
+  }
 }
