--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js >> nodelog.log",
     "dev": "node app.js",
+    "produce": "node app.js -real=/data/database/my_invs_server/real.db -nonce=/data/database/my_invs_server/nonce.db -log=/data/database/my_invs_server/log.db >> nodelog.log",
     "test": "mocha test.js"
   },
   "dependencies": {
